// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when checked 1`] = `
<div
  styleName="container"
>
  <input
    checked={true}
    id="checkbox_1"
    onChange={[Function]}
    styleName="checkbox"
    type="checkbox"
  />
  <label
    htmlFor="checkbox_1"
    styleName="label"
  >
    <div
      id="child"
    />
  </label>
  <FaCheck
    styleName="checkmark"
  />
</div>
`;

exports[`should render correctly when has an error 1`] = `
<div
  styleName="container-error"
>
  <input
    checked={true}
    id="checkbox_3"
    onChange={[Function]}
    styleName="checkbox"
    type="checkbox"
  />
  <label
    htmlFor="checkbox_3"
    styleName="label"
  >
    <div
      id="child"
    />
  </label>
  <FaCheck
    styleName="checkmark"
  />
</div>
`;

exports[`should render correctly when not checked 1`] = `
<div
  styleName="container"
>
  <input
    checked={false}
    id="checkbox_2"
    onChange={[Function]}
    styleName="checkbox"
    type="checkbox"
  />
  <label
    htmlFor="checkbox_2"
    styleName="label"
  >
    <div
      id="child"
    />
  </label>
</div>
`;
